JDK 1.1 changes